--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "css-loader": "^6.8.1",
     "filemanager-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.5.3",
+    "image-webpack-loader": "^8.1.0",
     "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.5.0",
     "typescript": "^4.9.5",
     "webpack": "^5.89.0",
